diesel_compile_tests/tests/fail/cannot_pass_aggregate_to_where.stderr
error[E0277]: the trait bound `diesel::expression::is_aggregate::Yes: diesel::expression::MixedAggregates<diesel::expression::is_aggregate::No>` is not satisfied
  --> $DIR/cannot_pass_aggregate_to_where.rs:15:24
   |
15 |     let source = users.filter(count(id).gt(3));
   |                        ^^^^^^ the trait `diesel::expression::MixedAggregates<diesel::expression::is_aggregate::No>` is not implemented for `diesel::expression::is_aggregate::Yes`
   |
   = help: the following implementations were found:
             <diesel::expression::is_aggregate::Yes as diesel::expression::MixedAggregates<diesel::expression::is_aggregate::Never>>
             <diesel::expression::is_aggregate::Yes as diesel::expression::MixedAggregates<diesel::expression::is_aggregate::Yes>>
   = note: required because of the requirements on the impl of `diesel::query_dsl::filter_dsl::FilterDsl<diesel::expression::grouped::Grouped<diesel::expression::operators::Gt<diesel::expression::count::count::count<diesel::sql_types::Integer, diesel::expression::nullable::Nullable<users::columns::id>>, diesel::expression::bound::Bound<diesel::sql_types::BigInt, i64>>>>` for `diesel::query_builder::SelectStatement<users::table>`
